--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "author": "Vinh Hoang",
   "license": "ISC",
   "dependencies": {
-    "body": "^5.1.0",
-    "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "firebase": "^3.3.0",
-    "json": "^9.0.4"
+    "firebase": "^3.3.0"
   }
 }
